# db-kursach

./: Cargo.toml  db.sql
src/: authorization.rs  error_window.rs  main.rs  secrets.rs  to_excel.rs
src/tables/: academic_plan.rs  accounts.rs  group.rs  mod.rs  specialization.rs  student.rs  student_card.rs  subject.rs  teacher.rs
ui/: ui.slint
