[package]
name = "db-kursach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.7.0"
postgres = "0.19.9"
rust_xlsxwriter = "0.80.0"
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"
